# dcs-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  config.yaml  docker-compose-test.yaml  docker-compose.yaml  example_config.yaml  index.html  license_header.txt  mkdocs.yml  opensearch_config.yaml  postgres_config.yaml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  manual_approver.yaml  poetry_publish.yaml  pypi_publish.yml
configuration/datasource_configuration/: index.html
configuration/metric_configuration/: index.html
datachecks/: __init__.py  __main__.py  __version__.py
datachecks/cli/: cli.py
datachecks/core/: inspect.py
datachecks/core/common/: errors.py
datachecks/core/configuration/: config_loader.py  configuration.py  configuration_parser.py  configuration_parser_v1.py
datachecks/core/dashboard/: html_widgets.py
datachecks/core/datasource/: __init__.py  base.py  data_source.py  manager.py  opensearch.py  postgres.py  search_datasource.py  sql_datasource.py
datachecks/core/logger/: base.py  default_logger.py
datachecks/core/metric/: base.py  combined_metric.py  custom_metric.py  freshness_metric.py  manager.py  metric.py  numeric_metric.py  reliability_metric.py
datachecks/core/profiling/: datasource_profiling.py  numeric_field_profiling.py  text_field_profiling.py
datachecks/core/repository/: metric_repository.py
datachecks/core/utils/: log.py  tracking.py  utils.py
datachecks/core/validation/: __init__.py  base.py  completeness_validation.py  custom_query_validation.py  manager.py  numeric_validation.py  reliability_validation.py  uniqueness_validation.py  validity_validation.py
datachecks/dashboard/static/: index.js  index.js.LICENSE.txt
datachecks/integrations/databases/: bigquery.py  databricks.py  elasticsearch.py  mssql.py  mysql.py  opensearch.py  postgres.py  redshift.py  snowflake.py  spark_df.py
datachecks/integrations/storage/: local_file.py
datachecks/report/: dashboard.py  models.py
datachecks/report/static/: index.js  index.js.LICENSE.txt
dcs_core/: __main__.py  __version__.py
dcs_core/cli/: cli.py
dcs_core/core/: __init__.py  inspect.py
dcs_core/core/common/: errors.py
dcs_core/core/configuration/: configuration_parser.py  configuration_parser_arc.py
dcs_core/core/datasource/: base.py  manager.py  search_datasource.py  sql_datasource.py
dcs_core/core/logger/: default_logger.py
dcs_core/core/metric/: base.py  combined_metric.py  custom_metric.py  manager.py  numeric_metric.py  reliability_metric.py
dcs_core/core/profiling/: datasource_profiling.py  numeric_field_profiling.py  text_field_profiling.py
dcs_core/core/repository/: metric_repository.py
dcs_core/core/utils/: tracking.py
dcs_core/core/validation/: base.py  completeness_validation.py  custom_query_validation.py  manager.py  numeric_validation.py  reliability_validation.py  uniqueness_validation.py  validity_validation.py
dcs_core/integrations/databases/: bigquery.py  databricks.py  db2.py  elasticsearch.py  mssql.py  mysql.py  opensearch.py  oracle.py  postgres.py  redshift.py  snowflake.py  spark_df.py  sybase.py
dcs_core/integrations/storage/: local_file.py
dcs_core/integrations/utils/: utils.py
dcs_core/report/: dashboard.py  models.py
dcs_core/report/static/: index.js.LICENSE.txt
docs/: CNAME  getting_started.md  index.md
docs/configuration/: datasource_configuration.md  metric_configuration.md
docs/integrations/: bigquery.md  databricks.md  elasticsearch.md  ibm_db2.md  mssql.md  mysql.md  opensearch.md  postgres.md  redshift.md  snowflake.md
docs/metrics/: combined.md  completeness.md  custom_sql.md  numeric_distribution.md  reliability.md  uniqueness.md
docs/support/: contact.md  usage_analytics.md
docs/validations/: combined.md  completeness.md  custom_sql.md  numeric_distribution.md  reliability.md  uniqueness.md  validity.md
example/: config.yaml  data_generator.py  run_datachecks.py
examples/: README.md  docker-compose.yaml  example.env  example_spark_df.py
examples/configurations/: example_bigquery_config.yaml  example_databricks_config.yaml  example_elasticsearch_config.yaml  example_mysql_config.yaml  example_opensearch_config.yaml  example_postgres_config.yaml  example_postgres_config_date.yaml  example_postgres_config_v1.yaml  example_redshift_config.yaml
examples/configurations/bigquery/: data_source.yaml  example_bigquery_config.yaml
examples/configurations/databricks/: data_source.yaml  example_databricks_config.yaml
examples/configurations/db2/: data_source.yaml  example_db2_config.yaml
examples/configurations/elasticsearch/: data_source.yaml  (+1 more)
examples/data_generator/: __main__.py  datasets.py  datasource.py
getting_started/: index.html
integrations/bigquery/: index.html
integrations/databricks/: index.html
integrations/elasticsearch/: index.html
integrations/ibm_db2/: index.html
integrations/mssql/: index.html
integrations/mysql/: index.html
integrations/opensearch/: index.html
integrations/postgres/: index.html
integrations/redshift/: index.html
integrations/snowflake/: index.html
search/: search_index.json
stylesheets/: extra.css
support/contact/: index.html
support/usage_analytics/: index.html
tests/: conftest.py  test_databases_availability.py  utils.py
tests/cli/: run_cli.py  test_cli.py  test_config.yaml
tests/core/: test_inspect.py
tests/integration/: conftest.py  test_databases_availability.py  test_inspect.py
ui/: package.json  tsconfig.json  webpack.config.js
ui/src/: App.tsx  index.tsx
validations/combined/: index.html
validations/completeness/: index.html
validations/custom_sql/: index.html
validations/numeric_distribution/: index.html
validations/reliability/: index.html
validations/uniqueness/: index.html
validations/validity/: index.html
(+122 files in other folders)
