[tool.poetry]
name = "datachecks"
version = "0.1.2"
description = "Open Source Data Quality Monitoring"
license = "Apache-2.0"
authors = [
    "Waterdip Labs <hello@waterdip.ai>"
]
repository = "https://github.com/waterdipai/datachecks"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
packages = [{ include = "datachecks" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.1.5"
pyyaml = "^6.0"
requests = "^2.31.0"
opensearch-py = { version="^2.2.0", optional=true }
sqlalchemy = { version="^2.0.19", optional=true }
psycopg2 = { version="^2.9.6", optional=true }
python-dateutil = "^2.8.2"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-docker = "^2.0.0"
pytest-mock = "^3.10.0"
mongomock = "^4.1.2"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"

[tool.poetry.extras]
# When adding, update also: README + dev deps just above
postgres = ["psycopg2", "sqlalchemy"]
opensearch = ["opensearch-py"]

[tool.poetry.scripts]
datachecks = "datachecks.cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
