[tool.poetry]
name = "datachecks"
version = "0.2.5"
description = "Open Source Data Quality Monitoring"
license = "Apache-2.0"
authors = [
    "Waterdip Labs <hello@waterdip.ai>"
]
repository = "https://github.com/waterdipai/datachecks"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
packages = [{ include = "datachecks" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pytz = "^2023.3.post1"
click = "^8.1.5"
pyyaml = "^6.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
loguru = "^0.7.0"
rich = "^13.5.2"
pyparsing = "^3.1.1"
sqlalchemy = "1.4.49"
sqlalchemy-bigquery = { version="^1.8.0", optional=true }
opensearch-py = { version="^2.2.0", optional=true }
psycopg2 = { version="^2.9.6", optional=true }
databricks-sql-connector = { version="^2.9.3", optional=true }
elasticsearch = { version="^7.17.3", optional=true }
pymysql = { version="^1.1.0", optional=true, extras=["rsa"] }
sqlalchemy-redshift = { version="^0.8.14", optional=true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-docker = "^2.0.0"
pytest-mock = "^3.10.0"
mongomock = "^4.1.2"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.5.6"

[tool.poetry.extras]
# When adding, update also: README + dev deps just above
postgres = ["psycopg2"]
mysql = ["pymysql"]
opensearch = ["opensearch-py"]
bigquery = ["sqlalchemy-bigquery"]
databricks = ["databricks-sql-connector"]
elasticsearch = ["elasticsearch"]
redshift = ["sqlalchemy-redshift"]
all = ["psycopg2", "pymysql", "opensearch-py", "sqlalchemy-bigquery", "databricks-sql-connector", "elasticsearch", "sqlalchemy-redshift"]

[tool.poetry.scripts]
datachecks = "datachecks.cli.cli:main"

[tool.coverage.run]
omit = [
    "datachecks/integrations/databases/*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
