[tool.poetry]
name = "dcs-core"
version = "0.9.2"
description = "Open Source Data Quality Monitoring"
license = "Apache-2.0"
authors = [
    "Waterdip Labs <hello@waterdip.ai>"
]
repository = "https://github.com/datachecks/dcs-core"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
packages = [{ include = "dcs_core" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytz = "^2023.3.post1"
click = "^8.1.5"
pyyaml = "^6.0"
requests = "^2.32.4"
python-dateutil = "^2.8.2"
loguru = "^0.7.0"
rich = "^13.5.2"
pyparsing = "^3.1.1"
numpy = "1.26.4"
sqlalchemy = ">=2.0.14,<2.1.0"
sqlalchemy-bigquery = { version="^1.8.0", optional=true }
opensearch-py = { version="^2.2.0", optional=true }
databricks-sql-connector = { version="^3.3.0", optional=true }
elasticsearch = { version="^9.1.0", optional=true }
pymysql = { version="^1.1.0", optional=true, extras=["rsa"] }
snowflake-sqlalchemy = { version="^1.5.3", optional=true }
pyodbc = { version="^5.0.1", optional=true }
psycopg2-binary = {version = "^2.9.9", optional = true}
pyspark = { version="^3.2.1", optional=true }
oracledb = { version=">=1.1.1,<3.0.0", optional=true }
ibm-db-sa = {version = "^0.4.1", optional = true}
ibm-db = {version = "^3.2.3", optional = true}
sqlalchemy-sybase = {version = "^2.0.0", optional = true}
h11 = "^0.16.0"
protobuf = "^5.29.5"
tornado = "^6.5"
setuptools = ">=78.1.1"
urllib3 = "^2.5.0"
jinja2 = "^3.1.6"
snowflake-connector-python = {version = "^3.17.2", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-docker = "^3.1.1"
pytest-mock = "^3.10.0"
mongomock = "^4.1.2"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
python-dotenv = "^1.0.0"
pandas = "^1.4.0"
jupyter = "^1.0.0"
pyspark = "^3.2.1"
findspark = "^1.4.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.5.6"

[tool.poetry.extras]
# When adding, update also: README + dev deps just above
postgres = ["psycopg2-binary"]
mysql = ["pymysql"]
ms_sql = ["pyodbc"]
opensearch = ["opensearch-py"]
bigquery = ["sqlalchemy-bigquery"]
databricks = ["databricks-sql-connector"]
elasticsearch = ["elasticsearch"]
snowflake = ["snowflake-sqlalchemy","snowflake-connector-python"]
spark = ["pyspark"]
oracle = ["oracledb"]
db2 = ["ibm-db","ibm-db-sa"]
sybase = ["sqlalchemy-sybase"]
all = [
    "psycopg2-binary",
    "pymysql",
    "opensearch-py",
    "sqlalchemy-bigquery",
    "databricks-sql-connector",
    "elasticsearch",
    "snowflake-sqlalchemy",
    "pyodbc",
    "pyspark",
    "oracledb",
    "ibm-db",
    "ibm-db-sa",
    "sqlalchemy-sybase",
]

[tool.poetry.scripts]
dcs-core = "dcs_core.cli.cli:main"

[tool.coverage.run]
omit = [
    "dcs/integrations/databases/*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
